<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_dasar"
    tools:context=".MainActivity11">

    <Button
        android:layout_marginTop="60dp"
        android:id="@+id/luas_balok"
        android:background="@drawable/custombutton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/luas_permukaan_balok"
        android:layout_gravity="center"
        android:textSize="7pt"
        android:layout_marginBottom="10dp"/>
    <Button
        android:id="@+id/btn_volume_balok"
        android:background="@drawable/custombutton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/volume_balok"
        android:layout_gravity="center"
        android:textSize="7pt"
        android:layout_marginBottom="10dp"/>
    <Button
        android:id="@+id/luas_bola"
        android:background="@drawable/custombutton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/luas_permukaan_bola"
        android:layout_gravity="center"
        android:textSize="7pt"
        android:layout_marginBottom="10dp"/>
    <Button
        android:id="@+id/volume_bola"
        android:background="@drawable/custombutton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/volume_bola"
        android:layout_gravity="center"
        android:textSize="7pt"
        android:layout_marginBottom="10dp"/>
    <Button
        android:id="@+id/luas_kerucut"
        android:background="@drawable/custombutton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/luas_permukaan_kerucut"
        android:layout_gravity="center"
        android:textSize="7pt"
        android:layout_marginBottom="10dp"/>
    <Button
        android:id="@+id/volume_kerucut"
        android:background="@drawable/custombutton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/volume_kerucut"
        android:layout_gravity="center"
        android:textSize="7pt"
        android:layout_marginBottom="10dp"/>
    <Button
        android:id="@+id/luas_tabung"
        android:background="@drawable/custombutton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/luas_permukaan_tabung"
        android:layout_gravity="center"
        android:textSize="7pt"
        android:layout_marginBottom="10dp"/>
    <Button
        android:id="@+id/volume_tabung"
        android:background="@drawable/custombutton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/volume_tabung"
        android:layout_gravity="center"
        android:textSize="7pt"
        android:layout_marginBottom="10dp"/>

</LinearLayout>